--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -112,10 +112,13 @@ a {
 #about {
     display: flex;
     flex-direction: column;
+    font-size: initial;
     box-sizing: border-box;
+    color: rgb(88, 83, 83);
     padding: 10px;
-    background-color: (rgb(255, 255, 255));
+    background-color: rgb(255, 255, 255);
     margin-bottom: 50px;
+    padding: left;
 }
 
 #pic {
@@ -127,7 +130,7 @@ a {
 #pic img {
     width: 300px;
     margin-right: 20px;
-    border-radius: 100px;
+    border-radius: 400px;
 
 }
 
@@ -135,13 +138,26 @@ a {
     display: flex;
     flex-direction: column;
     text-align: justify;
+    padding: 0px 100px 0px 100px;
 }
 
 #intro h2 {
+    flex-wrap: wrap;
     font-size: 2rem;
     color: rgb(204, 108, 52);
     margin-bottom: 10px;
     font-family:Georgia, 'Times New Roman', Times, serif ;
+    margin-top: 1rem;
+}
+
+/* skills */
+section .title{
+    position: relative;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: sans-serif;
 }
 
 /* portfolio section */
@@ -192,7 +208,7 @@ a {
     align-items: center;
     text-align: justify;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 20px;
     background: linear-gradient(to top, rgb(204, 108, 52) 50%, rgb(250, 250, 250) 50%);
     background-size: 100% 200%;
     transition: all .8s;
