--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -185,7 +185,7 @@ section .title{
 }
 
 /*services section*/
-#services {
+#socials {
     display: flex;
     flex-direction: column;
     padding: 20px;
